# OnlieAuctionSystem

online-auction-system/: CMakeLists.txt  README.md  bids.txt  items.txt  main.cpp  users.txt
online-auction-system/static/: style.css
online-auction-system/templates/: auction.html  dashboard.html  index.html  login.html  register.html
